Add DTLA logo favicon (white text on black circle with blue border)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DTLA - Digital Trust Literacy App | Stay Safe Online</title>
     <meta name="description" content="Empower yourself with digital trust literacy. DTLA helps you identify scams, protect your privacy, and navigate the digital world safely with AI-powered tools and community support." />
